--- a/scss/_btn.scss
+++ b/scss/_btn.scss
@@ -28,6 +28,7 @@
     font-size: 20px;
     line-height: 40px;
     right: 6px;
+    top: 0;
   }
 
   .icon-envelope,
